kubernetes/services/sc2-data-manager/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sc2-data-manager
  namespace: sc2
  labels:
    app: sc2-data-manager
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: sc2-data-manager
  template:
    metadata:
      labels:
        app: sc2-data-manager
    spec:
      imagePullSecrets:
        - name: ghcr-pull-secret
      containers:
        - name: sc2-data-manager
          image: ghcr.io/coreymerritt/private.sc2-data-manager:1.0.0
          command: ["./run-server.sh"]
          workingDir: /app
          ports:
            - containerPort: 23231
              name: http
          volumeMounts:
            - name: db
              mountPath: /app/sc2-data-manager.db
              subPath: sc2-data-manager.db
            - name: game-files
              mountPath: /sc2-data-manager
            - name: config
              mountPath: /etc/sc2_data_manager
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 1Gi
      volumes:
        - name: db
          persistentVolumeClaim:
            claimName: sc2-data-manager-db
        - name: game-files
          persistentVolumeClaim:
            claimName: sc2-data-manager-game-files
        - name: config
          persistentVolumeClaim:
            claimName: sc2-data-manager-config
