kubernetes/services/sc2-data-manager/service.sc2-data-manager.yml
apiVersion: v1
kind: Service
metadata:
  name: sc2-data-manager
  namespace: sc2
spec:
  selector:
    app: sc2-data-manager
  type: ClusterIP
  ports:
    - port: 23231
      targetPort: 23231
